--- a/server/djangoapp/templates/djangoapp/index.html
+++ b/server/djangoapp/templates/djangoapp/index.html
@@ -43,6 +43,11 @@
     </nav>
 
     <!--Add a dealer table here -->
+    {% for d_n in dealer_names %}
+    <div class="container-fluid">
+        {{d_n}}
+    </div>
+    {% endfor %}
 
     </body>
 
