--- a/server/djangoapp/templates/djangoapp/index.html
+++ b/server/djangoapp/templates/djangoapp/index.html
@@ -19,6 +19,9 @@
                 <a class="navbar-brand" href="{% url 'djangoapp:about' %}">About us</a>  
                 <a class="navbar-brand" href="{% url 'djangoapp:contact' %}">Contact us</a>
             </div>
+            <div class="nav navbar-nav">
+                Gregory's Cars
+            </div>
             <ul class="nav navbar-nav navbar-right">
                 {% if user.is_authenticated %}
                 <li>
@@ -42,7 +45,6 @@
         </div>
     </nav>
 
-    <!--Add a dealer table here -->
     {% for d_n in dealer_names %}
     <div class="container-fluid">
         {{d_n}}
