--- a/server/djangoapp/templates/djangoapp/about.html
+++ b/server/djangoapp/templates/djangoapp/about.html
@@ -1,3 +1,4 @@
+<!DOCTYPE html>
 <html>
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css">
     <h1>
