--- a/server/djangoapp/templates/djangoapp/about.html
+++ b/server/djangoapp/templates/djangoapp/about.html
@@ -1,8 +1,13 @@
 <!DOCTYPE html>
-<html>
-    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css">
-    <h1>
-    Welcome to Best Cars dealership, home to the best cars in North America.<br>
-    We sell domestic and imported cars at reasonable prices.
-    </h1>
+
+<!--suppress JSUnresolvedLibraryURL -->
+<html lang="eng">
+<head>
+    <title>About</title>
+</head>
+<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css">
+<h1>
+    Welcome to Gregory's Cars Dealership, home to the best cars in Universe.<br>
+    We sell upscale and swanky apparatus.
+</h1>
 </html>
