--- a/server/djangoapp/templates/djangoapp/base.html
+++ b/server/djangoapp/templates/djangoapp/base.html
@@ -10,6 +10,37 @@
     <link rel="stylesheet" href="{% static 'css/main.css' %}" type="text/css" />
   </head>
   <body>
+    <nav class="navbar navbar-header">
+      <div class="container-fluid">
+          <div class="navbar-header">
+              <a class="navbar-brand" href="{% url 'djangoapp:about' %}">About us</a>
+              <a class="navbar-brand" href="{% url 'djangoapp:contact' %}">Contact us</a>
+          </div>
+          <div class="nav navbar-nav">
+              Gregory's Cars
+          </div>
+          <ul class="nav navbar-nav navbar-right">
+              {% if user.is_authenticated %}
+                  <li>
+                      <a class="btn btn-link" href="#">{{ user.first_name }}({{ user.username }})</a>
+                      <a class="btn btn-link" href="{% url 'djangoapp:logout' %}">Logout</a>
+                  </li>
+              {% else %}
+                  <li>
+                      <form class="form-inline" action="{% url 'djangoapp:login' %}" method="post">
+                          {% csrf_token %}
+                          <div class="input-group">
+                              <input type="text" class="form-control" placeholder="Username" name="username" >
+                              <input type="password" class="form-control" placeholder="Password" name="psw" >
+                              <button class="btn btn-primary" type="submit">Login</button>
+                              <a class="btn btn-link" href="{% url 'djangoapp:signup' %}">Sign Up</a>
+                          </div>
+                      </form>
+                  </li>
+              {% endif %}
+          </ul>
+      </div>
+  </nav>
     <div class="container">
       {% block pagecontent %}
       {% endblock %}
