--- a/server/djangoapp/templates/djangoapp/dealer_details.html
+++ b/server/djangoapp/templates/djangoapp/dealer_details.html
@@ -1,4 +1,5 @@
 <!DOCTYPE html>
+<!--suppress ALL -->
 <html lang="en">
 <head>
     <meta charset="UTF-8">
@@ -7,25 +8,61 @@
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css">
 </head>
 
-    <body>
+<body>
 
-    <!--Add a nav bar here -->
-    <div class="nav navbar-nav">
-    </div>
-
-    <!-- Add reviews as cards -->
-    <div class="card-columns">
-    {% for review in reviews %}
-    <div class="card">
-        <!-- <img class="card-img-top" src="..." alt="Card image cap"> -->
-        <div class="card-body">
-          <h5 class="card-title">Card title</h5>
-          <p class="card-text">{{review}}</p>
-          <a href="#" class="btn btn-primary">Go somewhere</a>
+<nav class="navbar navbar-header">
+    <div class="container-fluid">
+        <div class="navbar-header">
+            <a class="navbar-brand" href="{% url 'djangoapp:index' %}">Home</a>
+            <a class="navbar-brand" href="{% url 'djangoapp:about' %}">About us</a>
+            <a class="navbar-brand" href="{% url 'djangoapp:contact' %}">Contact us</a>
         </div>
-      </div>
-    {% endfor %}
+        <div class="nav navbar-nav">
+            Gregory's Dealerships Portal
+        </div>
+        <ul class="nav navbar-nav navbar-right">
+            {% if user.is_authenticated %}
+                <li>
+                    <a class="btn btn-link" href="{% url 'djangoapp:add_review' dealer_id %}">Add Review</a>
+                    <a class="btn btn-link" href="#">{{ user.first_name }}({{ user.username }})</a>
+                    <a class="btn btn-link" href="{% url 'djangoapp:logout' %}">Logout</a>
+                </li>
+            {% else %}
+                <li>
+                    <form class="form-inline" action="{% url 'djangoapp:login' %}" method="post">
+                        {% csrf_token %}
+                        <div class="input-group">
+                            <input type="text" class="form-control" placeholder="Username" name="username">
+                            <input type="password" class="form-control" placeholder="Password" name="psw">
+                            <button class="btn btn-primary" type="submit">Login</button>
+                            <a class="btn btn-link" href="{% url 'djangoapp:signup' %}">Sign Up</a>
+                        </div>
+                    </form>
+                </li>
+            {% endif %}
+        </ul>
     </div>
-    </body>
+</nav>
+
+<p>
+<h5>Users reviews for <b>{{ dealership }}</b></h5>
+</p>
+
+<div class="card-columns">
+    {% for review in reviews %}
+        <div class="card">
+            <img class="card-img-top"
+                 src="{{ MEDIA_URL }}/emoji/{{ review.sentiment }}.png"
+                 alt="Card image cap"
+                 style="width: 100px;">
+            <div class="card-body">
+                <h5 class="card-title">{{ review.car_make }} {{ review.car_model }}</h5>
+                <h5 class="card-title">{{ review.year }} </h5>
+                <p class="card-text">{{ review.review }}</p>
+            </div>
+        </div>
+    {% endfor %}
+</div>
+</body>
 
 </html>
